--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "khaled.alshamaa/ar-php": "^6.3",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "mohamedsabil83/laravel-hijrian": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
